tests/rosetta/transpiler/FS/add-a-variable-to-a-class-instance-at-runtime.error
compile: exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/rosetta/transpiler/FS/add-a-variable-to-a-class-instance-at-runtime.fs(3,1): warning FS0221: The declarations in this file will be placed in an implicit module 'Add-a-variable-to-a-class-instance-at-runtime' based on the file name 'add-a-variable-to-a-class-instance-at-runtime.fs'. However this is not a valid F# identifier, so the contents will not be accessible from other files. Consider renaming the file or adding a 'module' or 'namespace' declaration at the top of the file.

/workspace/mochi/tests/rosetta/transpiler/FS/add-a-variable-to-a-class-instance-at-runtime.fs(24,13): warning FS0020: This expression should have type 'unit', but has type 'SomeStruct'. Use 'ignore' to discard the result of the expression, or 'let' to bind the result to a name.

/workspace/mochi/tests/rosetta/transpiler/FS/add-a-variable-to-a-class-instance-at-runtime.fs(30,35): error FS0001: The type 'Map<string,string>' is not compatible with the type 'seq<string>'

/workspace/mochi/tests/rosetta/transpiler/FS/add-a-variable-to-a-class-instance-at-runtime.fs(40,1): warning FS0020: This expression should have type 'unit', but has type 'obj'. Use 'ignore' to discard the result of the expression, or 'let' to bind the result to a name.
